--- a/public/telaInicial.html
+++ b/public/telaInicial.html
@@ -28,7 +28,7 @@
             <small>Cadastrar Novo Item</small>
         </div>
     </div>
-    <div class="button red">
+    <div class="button red" onclick="redirecionarEdicao()">
         <img src="imagens/Vector.svg" alt="">
         <div class="texto">
             <p>Edição</p>
@@ -122,6 +122,10 @@
     function redirecionarCadastro() {
         window.location.href = "cadastro1.html";
     }
+    function redirecionarEdicao() {
+        window.location.href = "edicao.html";
+    }
+
 
     //>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
     // Seleciona o botão e o dropdown
