arrumando links do hamburguer nas telas de cadastro

--- a/public/cadastro2.html
+++ b/public/cadastro2.html
@@ -34,7 +34,7 @@
 
 
                 <li class="home">
-                    <a href="#" id="home">
+                    <a href="telaInicial.html" id="home">
                         <div class="home"></div>
                         <span>Home</span>
                     </a>
@@ -42,7 +42,7 @@
 
 
                 <li class="cadastrar">
-                    <a href="#" id="cadas">
+                    <a href="cadastro2.html" id="cadas">
                         <div class="box-of-good-good"></div>
                         <span>Cadastrar</span>
                     </a>
@@ -71,7 +71,7 @@
 
 
                 <li class="financeiro">
-                    <a href="#" id="finan">
+                    <a href="financeiro.html" id="finan">
                         <div class="financial"></div>
                         <span>Financeiro</span>
                     </a>
