Arrumando o css filtro

--- a/public/catalogo.html
+++ b/public/catalogo.html
@@ -59,9 +59,9 @@
                     </div>
                 </div>
                 <div id="ordernaritem">Ordenar Item
-                    <div id="botoes">
-                        <button>A a Z</button>
-                        <button>Z a A</button>
+                    <div id="botoesaz">
+                        <button class="botoes" onclick="activateButton(this)">A-Z</button>
+                        <button class="botoes" onclick="activateButton(this)">Z-A</button>
                     </div>
                 </div>
             </div>
