colocando o hamburguer na tela de edição

--- a/public/layout.html
+++ b/public/layout.html
@@ -20,7 +20,7 @@
     <!---------------NAVBAR-------------------------------------------------->
     <div class="navbar-caixa">
         <div class="conteudo-nav">
-            <div class="texto-nav">Cadastrar Novo Item</div>
+            <div class="texto-nav">Layout do Estoque</div>
 
             <button id="menu-btn" class="menu-btn">&#9776;</button>
         </div>
