--- a/public/cadastro2.html
+++ b/public/cadastro2.html
@@ -50,7 +50,7 @@
 
 
                 <li class="edicao">
-                    <a href="#" id="edicao">
+                    <a href="edicao.html" id="edicao">
                         <div class="pencil"></div>
                         <span>Edição</span>
                     </a>
