--- a/public/edicao.html
+++ b/public/edicao.html
@@ -48,7 +48,7 @@
 
 
                 <li class="edicao">
-                    <a href="#" id="edicao">
+                    <a href="edicao.html" id="edicao">
                         <div class="pencil"></div>
                         <span>Edição</span>
                     </a>
