colocando hamburguer na tela de Estoque real e inventário

--- a/public/telaInicial.html
+++ b/public/telaInicial.html
@@ -46,7 +46,7 @@
     <div class="dropdown-content" id="estoqueDropdown" style="display: none;">
         <a href="catalogo.html">• Catálogo</a>
         <a href="estoque_real.html">• Estoque Real e Inventário</a>
-        <a href="layout_estoque.html">• Layout do Estoque</a>
+        <a href="layout.html">• Layout do Estoque</a>
     </div>
 
     <div class="button yellow" onclick="redirecionarFinanceiro()">
