arrumando tela de catálogo

--- a/public/catalogo.html
+++ b/public/catalogo.html
@@ -151,8 +151,8 @@
         <!-- acabou as mudanças -->
         <form id="formPesquisa">
             <div class="div_pesquisa">
-                <div id="area"><input type="text" id="codigo"></div>
-                <div><button type="submit" id="pesquisar">Pesquisar</button></div>
+                <input type="text" id="codigo">
+                <button id="pesquisar">Pesquisar <img src="imagens/lupa.svg" alt="" id="pes"></button>
             </div>
         </form>
     </div>
