colocando hamburguer na tela de reebimento novamente (guilherme ta de graça com a minha cara)

--- a/public/estoque_real.html
+++ b/public/estoque_real.html
@@ -90,7 +90,9 @@
     <div id="barradebusca">
         <!-- mudanças filtro -->
         <div id="filtrarcontainer">
-            <div id="filtrar">Filtrar</div>
+            <div class="div_pesquisa">
+                <button id="filtrar"><img src="imagens/filtro.svg" alt="" id="fil">Filtrar</button>
+            </div>
             <div id="caixote">
                 <div id="ajeitar">
                     <div id="subajeitada">
@@ -149,7 +151,7 @@
         <!-- acabou as mudanças -->
         <form id="formPesquisa">
             <div id="area"><input type="text" id="codigo"></div>
-            <div><button type="submit" id="pesquisar">Pesquisar</button></div>
+            <button id="pesquisar">Pesquisar <img src="imagens/lupa.svg" alt="" id="pes"></button>
         </form>
     </div>
 
