--- a/public/adicionarUsuario.html
+++ b/public/adicionarUsuario.html
@@ -66,7 +66,8 @@
 
         <button id="enviar" type="submit">Enviar</button>
     </form>
-
+    
+    <a id="sair" href="telaInicial-Professor.html">Sair</a>
 
     <!-- Script para "esconder" o input data -->
     <script>
